@@ -186,6 +186,7 @@ build-stamp: $(QUILT_STAMPFN) $(bjam) user-config.jam
 
 	cd tools/bcp && $(JAM)
 	cd tools/inspect/build && $(JAM)
+	cd tools/quickbook && $(JAM)
 	cd tools/wave/build && $(JAM)
 	cd tools/regression/build && $(JAM)
 	cd libs/python/pyste/install && python setup.py build
@@ -213,6 +214,7 @@ clean: unpatch clean-debhelper
 	rm -rf tools/jam/src/bootstrap
 	rm -rf tools/jam/src/bin.*
 	rm -ff tools/jam/src/bjam
+	rm -rf tools/regression/build/bin
 	rm -rf bin.v2 dist
 	rm -rf user-config.jam
 
@@ -257,8 +259,14 @@ install: build clean-debhelper $(filtered_files)
 	dh_install -plibboost$(PKGVERSION)-dev \
 	   debian/tmp/usr/include/boost-$(boost_version)/boost \
 	   usr/include
-	dh_install -plibboost$(PKGVERSION)-dev dist/bin/bcp usr/bin
+	dh_install -plibboost$(PKGVERSION)-dev \
+	   dist/bin/bcp \
+	   dist/bin/inspect \
+	   dist/bin/quickbook \
+	   usr/bin
 	dh_installman -plibboost$(PKGVERSION)-dev debian/bcp.1
+	dh_install -plibboost$(PKGVERSION)-dev tools/boostbook/xsl/* usr/share/boostbook/xsl
+	dh_install -plibboost$(PKGVERSION)-dev tools/boostbook/dtd/* usr/share/boostbook/dtd
 
 	# package libboost-doc
 	rm -rf $(htmldir)
